--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <header>
       <h1>Natur<span>Ale</span></h1>
-      <p><strong>Faça seu pedido agora mesmo! </strong> </p>
-      <p><strong>Telefone: 12991524550</strong> </p>
+      <p><strong>Aberto todos os dias. 8h-21h </strong> </p>
     </header>
 
     <section>
@@ -26,7 +25,7 @@
           <div class="details">
             <h3>Frango</h3>
             <p class="description">
-            Delicioso Lanche natural com patê de frango e alface    
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
           </div>
 
@@ -39,7 +38,7 @@
           <div class="details">
             <h3>Atum</h3>
             <p class="description">
-            Delicioso Lanche natural com atum e alface
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
           </div>
 
@@ -51,7 +50,7 @@
           <div class="details">
             <h3>Peito de Perú</h3>
             <p class="description">
-            Delicioso Lanche natural com peito de perú e alface
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
           </div>
 
@@ -104,6 +103,21 @@
        
         </ul>
        </section>
+        <section>
+      <h2>Comidas</h2>
+        <ul>
+        <li>
+          <div class="details">
+            <h3>Carnes</h3>
+            <p class="description">
+             Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            </p>
+          </div>
+
+          <strong class="price">
+            R$5.00
+        </section>
+      
   </body>
   </html>
   
