--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <header>
       <h1>Natur<span>Ale</span></h1>
-      <p><strong>Aberto todos os dias. 8h-21h </strong> </p>
+      <p><strong>Faça seu pedido agora mesmo! </strong> </p>
+      <p><strong>Telefone: 12991524550</strong> </p>
     </header>
 
     <section>
@@ -25,7 +26,7 @@
           <div class="details">
             <h3>Frango</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Delicioso Lanche natural com patê de frango e alface    
             </p>
           </div>
 
@@ -38,7 +39,7 @@
           <div class="details">
             <h3>Atum</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Delicioso Lanche natural com atum e alface
             </p>
           </div>
 
@@ -50,7 +51,7 @@
           <div class="details">
             <h3>Peito de Perú</h3>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Delicioso Lanche natural com peito de perú e alface
             </p>
           </div>
 
@@ -66,17 +67,13 @@
           <div class="details">
             <h3>Refrigerante</h3>
             <p class="description">
-              Refrigerante de sua preferência
+                Escolha o Refrigerante de sua preferência
             </p>
           </div>
-
           <strong class="price">
-            R$5.00
+            R$10.00
           </strong>
         </li>
-          </strong>
-        </li>
-             
         </ul>
        </section>
   </body>
